Fix the spacing and layout for datagrid filters.
Datagrid filters (such as Show/Hide Archived) were lacking any suitable
spacing, appearing right alongside the header or tabs. This gave a
pretty ugly appearance.

This change fixes that, adding some spacing between the title/tabs and
filter, and between multiple filters. We don't currently use multiple
filters anywhere, but in testing this, I found that multiple filters
would be stacked vertically, rather than horizontally. This has been
fixed as well.

Testing Done:
Tested the dashboard, users page, and other datagrids.

Tested adding multiple filters.

Reviewed at https://reviews.reviewboard.org/r/13136/

--- a/reviewboard/static/rb/css/ui/datagrids.less
+++ b/reviewboard/static/rb/css/ui/datagrids.less
@@ -50,6 +50,7 @@
       @bg: #FFFFE0;
       @border-color: darken(@bg, 65%);
       @border-radius: @_boxes-vars[@border-radius];
+      @spacing: 1em;
     }
 
     .paginator() {
@@ -375,8 +376,14 @@ body.datagrid-page {
 
     .datagrid-filters {
       list-style: none;
-      margin: 0;
+      margin: 0 0 0 0;
       padding: 0;
+
+      > li {
+        display: inline-block;
+        margin: 0 0 0 @_filter-menu-vars[@spacing];
+        padding: 0;
+      }
     }
 
     .datagrid-filters-menu {
